syntax = "proto3";
package auth;
option go_package = "auth";

// Interface exported by the server
service Auth {
    rpc Register(RegisterRequest) returns (RegisterReply) {}
    rpc GetSalt(SaltRequest) returns (SaltReply) {}
    rpc Login(LoginRequest) returns (LoginReply) {}
}

message RegisterRequest {
    string mail = 1;
    string password = 2;
}

message RegisterReply {
    string salt = 1;
}

message SaltRequest {
    string mail = 1;
}

message SaltReply {
    string salt = 1;
}

message LoginRequest {
    string mail = 1;
    string iv = 2;
    string payload = 3;
}

message LoginReply {
    string iv = 1;
    string payload = 2;
}